src/test/deca/syntax/invalid/created/sans_objet/string.deca
// Description:
//    Programme minimaliste utilisant flottant.
//
//
// Resultats:
//   ligne 12 : Erreur
//
// Historique:
//    cree le 11/01/2024

{
   println("hello);
}